added screenshot files

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
             </p>
         </article>>
     </aside>
-    
+
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
+        <small>
             &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
+        </small>
     </footer>
 </body>
 
