fixed the images and started adding comments

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./Develop/assets/css/style.css">
-    <title>Horiseon</title>
+    <!-- Changed the title to reflect the website content rather than simply named website -->
+    <title>Horiseon web services</title>
 </head>
 
 <body>
+    <!-- This is being used as a header so I went ahead and changed it to the header tag -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -26,8 +28,10 @@
     </header>
 
     <div class="hero"></div>
-
+    
+   <!--  I replaced this with a main tag because it has the met and potatoes of the page -->
     <main>
+        <!-- Since this is the main portion of the page, it made sense to put label these divs as sections -->
         <section>
             <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -50,8 +54,10 @@
             </p>
         </section>
     </main>
-
+    
+    <!-- This side bar gives us additional info but with it being offset the aside tag feels more appropriate -->
     <aside>
+        <!-- These have their own info and links so i would classify them as articles -->
         <article>
             <h3>Lead Generation</h3>
             <img src="./Develop/assets/images/lead-generation.png" />
@@ -77,6 +83,7 @@
         </article>>
     </aside>
 
+    <!-- Since this is being used as a footer, I changed it to the footer tag. -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <small>
