--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-    <!-- This is being used as a header so I went ahead and changed it to the header tag -->
+    <!-- This is being used as a header so I went ahead and changed it to the header tag. -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
+            <!-- Changed this div to nav because it functioned as a nav bar. -->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -29,9 +30,9 @@
 
     <div class="hero"></div>
     
-   <!--  I replaced this with a main tag because it has the met and potatoes of the page -->
+   <!--  I replaced this with a main tag because it has the met and potatoes of the page. -->
     <main>
-        <!-- Since this is the main portion of the page, it made sense to put label these divs as sections -->
+        <!-- Since this is the main portion of the page, it made sense to put label these divs as sections. -->
         <section>
             <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -55,9 +56,9 @@
         </section>
     </main>
     
-    <!-- This side bar gives us additional info but with it being offset the aside tag feels more appropriate -->
+    <!-- This side bar gives us additional info but with it being offset the aside tag feels more appropriate. -->
     <aside>
-        <!-- These have their own info and links so i would classify them as articles -->
+        <!-- These have their own info and links so i would classify them as articles. -->
         <article>
             <h3>Lead Generation</h3>
             <img src="./Develop/assets/images/lead-generation.png" />
