--- a/index.html
+++ b/index.html
@@ -34,21 +34,24 @@
     <main>
         <!-- Since this is the main portion of the page, it made sense to put label these divs as sections. -->
         <section>
-            <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization" />
+            <!-- Added an alt attribute to make this more accessible. -->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section>
-            <img src="./Develop/assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./Develop/assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation Management" />
+            <!-- Added an alt attribute to make this more accessible. -->
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section>
-            <img src="./Develop/assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./Develop/assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Marketing" />
+            <!-- Added an alt attribute to make this more accessible. -->
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -61,7 +64,8 @@
         <!-- These have their own info and links so i would classify them as articles. -->
         <article>
             <h3>Lead Generation</h3>
-            <img src="./Develop/assets/images/lead-generation.png" />
+            <img src="./Develop/assets/images/lead-generation.png" alt="Lead Generation" />
+            <!-- Added an alt attribute to make this more accessible. -->
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -69,7 +73,8 @@
 
         <article>
             <h3>Brand Awareness</h3>
-            <img src="./Develop/assets/images/brand-awareness.png" />
+            <img src="./Develop/assets/images/brand-awareness.png" alt="Brand Awareness" />
+            <!-- Added an alt attribute to make this more accessible. -->
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -77,7 +82,8 @@
 
         <article>
             <h3>Cost Management</h3>
-            <img src="./Develop/assets/images/cost-management.png"></img>
+            <img src="./Develop/assets/images/cost-management.png" alt="Cost Management"></img>
+            <!-- Added an alt attribute to make this more accessible. -->
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
